# launch-core

./: .gitignore  .gitmodules  CMakeLists.txt  HEADER.txt  README.md  TODO.txt  TODO2.txt  config.h  macros.h  macros.h.gch  macros.s  platformio.ini  return.h  sched.s  test.cpp  test2.cpp  test2.s
.github/workflows/: notify_dependencies.yml
bloom_filter/: bloom_filter.h
bloom_filter/test/: test.cpp
common/: FcDefines.h  LinkMsg.h  MeasurementTypes.h
common/utils/: conversion.h  nmea.h
device/: BlockDevice.h  BlockDeviceTest.h  Device.cpp  Device.h  DeviceHandlerTask.h  DeviceMap.h  GPIODevice.h  I2CDevice.h  RegisterDevice.h  SPIDevice.h  SocketDevice.h  SocketPool.h  StreamDevice.h  TimerDevice.h
device/LSM6DSL/: LSM6DSL.h
device/linux/: ConsoleDevice.h  DebugDevice.h  LinuxUdpSocketDevice.h  map.h  test.cpp
device/peripherals/: README.txt  SensorDevice.h  adafruit_def.h
device/stm32/: HAL_UART_handlers.cpp  HAL_handlers.h  I2CDevice.h  SPIDevice.h  UARTDevice.h
device/test/: test.cpp
event/: ApogeeEvent.h  BoostEvent.h  Event.h  LandingEvent.h
filesystem/: File.h  FileSystem.h  Filesystem.h
filesystem/ChainFS/: ChainFS.h  descriptors.h  test.cpp
filesystem/FatFS/: FatFS.h  descriptors.h  test.cpp
filesystem/LittleFS/: LittleFS.h  Makefile  declarations.h  lfs.c  lfs.cpp  lfs.h  test.c  test.cpp
filesystem/NoFS/: NoFS.h
filesystem/test/: main.cpp
gpio/: gpio.h
hash/: hash.h
hashmap/: hashmap.h
hashmap/test/: test.cpp
init/: init.h
net/: Socket.h  common.h
net/arp/: ArpLayer.h  README.md  arp.h
net/ax25/: ax25.h
net/easy_arp/: EasyArpLayer.h
net/eth/: EthLayer.h  crctable.c  eth.h
net/icmp/: icmp.h  test.cpp
net/ipv4/: IPv4Router.h  ipv4.h
net/kiss/: kiss.h
net/loopback/: Loopback.h
net/network_layer/: NetworkLayer.h
net/packet/: Packet.h
net/routing/: Filter.h  IPv4Router.h  Loopback.h  MACRouter.h  NetworkLayer.h  Router.h  UDPRouter.h
net/simple_arp/: SimpleArpLayer.h
net/slip/: SLIPRingDevice.h  SlipRingDevice.h  slip.h
net/socket/: Socket.h
net/stack/: IPv4UDPStack.h  a.out  test.cpp
net/statistics/: NetworkStatistics.h
net/tftp/: tftp.h
net/transport_layer/: udp.h
net/udp/: UDPLayer  UDPLayer.h  UDPRouter  UDPRouter.h  udp.h
pool/: pool.h
pool/test/: test.cpp
queue/: allocated_queue.h  queue.h  queue_iterator.h  queue_node.h  queue_simple.h  queue_sort.h
queue/test/: test.cpp
ringbuffer/: RingBuffer.h  ringbuffer.h
ringbuffer/test/: test.cpp
sched/: config.h  macros.h  sched.cpp  sched.h
sched/macros/: README.md  block.h  call.h  jump_table.cpp  jump_table.h  macros.cpp  macros.h  reset.h  reset_ret.h  resume.h  sleep.h  yield.h
spinlock/: spinlock.h
src/: main.cpp
string/: allocated_string.h  lstring.h  string.h
sync/: BlockingSemaphore.h  Semaphore.h
synchro/: Semaphore.h
test/: compileCheck.cpp
triple_buffer/: TripleBuffer.h
udp/: udp.cpp  udp.h
utils/: conversion.h  event_detection.h  nmea.h
vector/: vector.h
(+106 files in other folders)
